--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera2" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera2.autofocus" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -53,7 +59,8 @@
             android:label="@string/title_activity_login" />
         <activity android:name=".SharePicture" />
         <activity android:name=".TestActivity" />
-        <activity android:name=".filesystest"></activity>
+        <activity android:name=".filesystest" />
+        <activity android:name=".cameraTest"></activity>
     </application>
 
 </manifest>
