--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera2" />
@@ -61,6 +63,15 @@
         <activity android:name=".TestActivity" />
         <activity android:name=".filesystest" />
         <activity android:name=".cameraTest"></activity>
+        <!-- <provider
+             android:name="android.support.v4.content.FileProvider"
+             android:authorities="com.example.td.phonegellary"
+             android:exported="false"
+             android:grantUriPermissions="true">
+             <meta-data
+                 android:name="android.support.FILE_PROVIDER_PATHS" />
+                 android:resource="@xml/provider_path"/>
+        </provider>-->
     </application>
 
 </manifest>
